Added tile class and core gameplay functionality
Created tile class to contain individual tile information and flags
Set flags for visibility, mines, and flag markers
Created map of resources to load in
Can generate a grid with random mines
Handled tracking of mines in proximity for each tile when grid is generated that then display the appropriate number on the tile
Added flag marking of unshown tiles
Started algorithm to clear all tiles with no mines when one is clicked

--- a/Minesweeper.vcxproj
+++ b/Minesweeper.vcxproj
@@ -157,6 +157,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source\Minesweeper.cpp" />
+    <ClCompile Include="Source\Private\Tile.cpp" />
     <ClCompile Include="Source\Private\TileMap.cpp">
       <RuntimeLibrary>MultiThreadedDebugDll</RuntimeLibrary>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -237,6 +238,7 @@
     <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Public\Tile.h" />
     <ClInclude Include="Source\Public\TileMap.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
